# sync

./: .gitignore  Dockerfile  Makefile  conf.json  conf.local.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
.cursor/rules/: backend-api-ws.mdc  coding-standards.mdc  frontend.mdc  prompt.mdc  sync-zero-guess.mdc
.github/workflows/: deploy.yml
apps/: __init__.py
apps/api/: __init__.py  alembic.ini  container.py  main.py  ws.py
apps/api/api/: __init__.py  auth.py  channels.py  files.py  git.py  health.py  messages.py  spaces.py  threads.py
apps/api/config/: __init__.py  config.py
apps/api/migrations/: env.py
apps/api/src/: __init__.py
apps/api/static/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  (+1 more)
apps/chat_worker/: __init__.py  broker.py  main.py  tasks.py
core/: __init__.py
core/auth/: __init__.py  context.py  jwt.py  jwt_middleware.py  models.py  passwords.py
core/broker/: __init__.py
core/clients/: __init__.py
core/config/: __init__.py  base.py  loader.py  models.py
core/db/: __init__.py  base_sql_repository.py  database.py
core/di/: __init__.py  container.py  wiring.py
core/logging/: __init__.py
deploy/: deploy_readme.md  ingress.sh  k8.sh  setup-docker.sh
tests/: __init__.py  conftest.py
tests/api/: __init__.py  test_api_server_fixture.py  test_ws_backend_first.py
tests/core/: __init__.py  test_config_loader.py  test_di_container.py
tests/fixtures/: api_server_manager.py  auth_fixture.py  chat_worker_manager.py  test_infra_manager.py
(+50 files in other folders)
