[project]
name = "sync"
version = "0.1.0"
description = "Engineering chat platform with GitLab integration (FastAPI, TaskIQ, Zero-Guess configs)."
requires-python = ">=3.14,<3.15"
dependencies = [
    "fastapi>=0.135.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "uvicorn[standard]>=0.37.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.16.5",
    "taskiq>=0.12.1",
    "taskiq-redis>=1.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.6",
    "greenlet>=3.3.2",
    "python-multipart>=0.0.22",
    "websockets>=16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "apps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

